<resources>
    <string name="app_name">MisNotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Titulo</string>
    <string name="ingresa_nueva_nota">INGRESA NUEVA NOTA</string>
    <string name="escribe_algo">Escribe Algo</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
</resources>