<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.newnote.NewNoteFragment"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_nueva_nota"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/et_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/titulo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25sp"
            android:hint="@string/escribe_algo"
            android:text=""
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"
                />

            <Button
                android:id="@+id/bt_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</layout>